#524: Added ItemAliasChecksumType queries